add program plan - new images

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -22,45 +22,28 @@
       <app-info-tab></app-info-tab>
     </div>
   </div>
-  <!--div class="center main-container">
+  <div class="center main-container">
     <br>
     <br>
     <h1 class="center">Programm</h1>
     <br>
+    <p class="center"><b>17:00 Uhr - Ankunft Location</b></p>
     <br>
+    <img class="center" src="images/terasse.png" style="width: 85vw; max-width: 500px">
     <br>
+    <p class="center">Wir treffen uns alle auf der Terasse.</p>
+    <p class="center">Willkommensrede & Fotoshooting</p>
     <br>
+    <p class="center"><b>18:30 Uhr - Dinner</b></p>
     <br>
-    <h1 class="center">Standesamt</h1>
+    <p class="center"><b>20:00 Uhr - Abendprogramm</b></p>
     <br>
+    <p class="center"><b>21:00 Uhr - Hochzeitstorte</b></p>
     <br>
-    <br>
-    <br>
-    <br>
-    <h1 class="center">Tee Zeremonie</h1>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h1 class="center">Ankunft Eventlocation</h1>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h1 class="center">Party!</h1>
-    <br>
-    <br>
-    <br>
+    <p class="center"><b>22:00 Uhr - Party</b></p>
     <br>
     <br>
   </div>
-  <div class="center main-container"-->
-  <!--div class="welcome center">
-      <app-primeng-galleria></app-primeng-galleria>
-    </div>
-  </div-->
   <div style="overflow: hidden; margin: 4px 0 0">
     <lightgallery class="lightgallery" [settings]="settings" [onBeforeSlide]="onBeforeSlide">
       @for (item of lightImages; track item.src) {
