--- a/src/app/components/dialogs/rules-dialog/rules-dialog.component.html
+++ b/src/app/components/dialogs/rules-dialog/rules-dialog.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Regeln</h2>
 <mat-dialog-content>
-    Folgendes gilt zu beachten:
+    Folgendes gilt es zu beachten:
     <ul>
         <li>Folgt in Kürze...</li>
     </ul>
