--- a/src/app/components/info-tab/info-tab.component.html
+++ b/src/app/components/info-tab/info-tab.component.html
@@ -43,11 +43,13 @@
   </mat-tab>
   <mat-tab [label]="tab2">
     <div style="width: 90vw;"></div>
-    <div class="myIframe">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2428.7456316114503!2d13.446413877578362!3d52.50184393757253!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84fd6f3d83d95%3A0x5d831aff6784e275!2sSpreespeicher%20Eventlocation!5e0!3m2!1sde!2sde!4v1740171558835!5m2!1sde!2sde"
-        width="100%" height="818px" allowfullscreen="" loading="lazy" frameBorder="0"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div style="height: 820px;">
+      <div class="myIframe">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2428.7456316114503!2d13.446413877578362!3d52.50184393757253!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84fd6f3d83d95%3A0x5d831aff6784e275!2sSpreespeicher%20Eventlocation!5e0!3m2!1sde!2sde!4v1740171558835!5m2!1sde!2sde"
+          width="100%" height="498px" allowfullscreen="" loading="lazy" frameBorder="0"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
     </div>
   </mat-tab>
   <mat-tab [label]="tab3">
