--- a/src/app/components/info-tab/info-tab.component.scss
+++ b/src/app/components/info-tab/info-tab.component.scss
@@ -40,7 +40,7 @@
 .myIframe {
     position: relative;
     overflow: auto;
-    height: 820px;
+    height: 500px; // 820px;
     -webkit-overflow-scrolling: touch;
 }
 
@@ -48,5 +48,5 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 818px;
+    height: 498px; // 818px; height="818px" in HTML
 }
