add footer content, add shadows

--- a/src/app/components/dialogs/prepare-dialog/prepare-dialog.component.html
+++ b/src/app/components/dialogs/prepare-dialog/prepare-dialog.component.html
@@ -1,8 +1,14 @@
 <h2 mat-dialog-title>Vorbereitung</h2>
 <mat-dialog-content>
-    Folgende Vorbereitungen sind zu treffen:
+    Wenn du dich im Vorfeld vorbereiten möchtet schau dir gerne diese Artikel an.
+    Diese dienen natürlich nur als allgemeine Orientierung. Deine Kinder sind natürlich willkommen.
+    <br>
+    <br>
     <ul>
-        <li>Folgt in Kürze...</li>
+        <li><a href="https://www.wundervollmomente.de/post/dos-und-don-ts-f%C3%BCr-hochzeitsg%C3%A4ste">Guide 1 für
+                Hochzeitsgäste</a></li>
+        <br>
+        <li><a href="https://hochzeitskiste.info/benimmregeln-hochzeitsgaeste/">Guide 2 für Hochzeitsgäste</a></li>
     </ul>
 </mat-dialog-content>
 <mat-dialog-actions>
