--- a/src/app/components/dialogs/rules-dialog/rules-dialog.component.html
+++ b/src/app/components/dialogs/rules-dialog/rules-dialog.component.html
@@ -1,8 +1,12 @@
-<h2 mat-dialog-title>Regeln</h2>
+<h2 mat-dialog-title>Hausregeln</h2>
 <mat-dialog-content>
     Folgendes gilt es zu beachten:
+    <br>
     <ul>
-        <li>Folgt in Kürze...</li>
+        <li>Habt eine gute Zeit zusammen!</li>
+        <li>Es darf innerhalb des Gebäudes nicht geraucht werden.</li>
+        <li>Toiletten sind bitte stets sauber zu halten.</li>
+        <li>Bitte geht pfleglich mit Möbeliar und Ausstattung um.</li>
     </ul>
 </mat-dialog-content>
 <mat-dialog-actions>
