--- a/src/app/components/dialogs/dresscode-dialog/dresscode-dialog.component.html
+++ b/src/app/components/dialogs/dresscode-dialog/dresscode-dialog.component.html
@@ -25,7 +25,7 @@
         <li><b>weitere No-Gos:</b></li>
         <ul>
             <li>
-                <p>Jogginghose</p>
+                <p>Jogging - Anzug/Hose</p>
             </li>
             <li>
                 <p>Flip-Flops</p>
