--- a/src/app/components/info-tab/info-tab.component.html
+++ b/src/app/components/info-tab/info-tab.component.html
@@ -60,8 +60,10 @@
         <br>
         <p><strong>Parkplätze in der Nähe</strong></p>
         <ul>
-          <li><span>Parkhaus direkt bei der Eventlocation <a href="https://maps.app.goo.gl/BKLRmyHD1ZpthsFo6">nHow
-                Parking</a>.</span></li>
+          <li><span>Tiefgarage direkt bei der Eventlocation <a href="https://maps.app.goo.gl/BKLRmyHD1ZpthsFo6">nHow
+                Parking</a>.</span> (ca. 20 € pro Tag)</li>
+          <li><span>Parkplätze vor dem <a href="https://maps.app.goo.gl/hjS8v2asFaYRDwF26">nHow
+                Hotel</a>.</span></li>
           <li><span>Öffentliche Parkplätze gegenüber der Eventlocation <a
                 href="https://maps.app.goo.gl/FfA68qVud9zjRY7N6">Ehrenbergstraße</a>.</span></li>
         </ul>
@@ -70,8 +72,11 @@
         <ul>
           <li>
             <span>Parkhaus direkt bei der Uber Arena <a href="https://maps.app.goo.gl/ZTDfvEZvBJA5wUMj8">Parkhaus East
-                SideMall</a>.</span>
+                SideMall</a>. (ca. 10 € pro Tag)</span>
           </li>
+          <li><span>Weitere öffentliche Parkplätze in der <a
+                href="https://maps.app.goo.gl/E9N8VRP9hkC3X4Hv6">Mühlenstraße</a>, an der
+              Berliner Mauer.</span></li>
         </ul>
       </div>
       <!--div class="text center">
