--- a/src/app/components/dialogs/dresscode-dialog/dresscode-dialog.component.html
+++ b/src/app/components/dialogs/dresscode-dialog/dresscode-dialog.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Dresscode</h2>
 <mat-dialog-content>
-    <p>Macht euch schick, sowie ihr Lust und Laune habt.</p>
+    <p>Festlich, Schick, Elegant.</p>
     <br>
     <h1>No-Gos</h1>
     <ul>
@@ -25,7 +25,7 @@
         <li><b>weitere No-Gos:</b></li>
         <ul>
             <li>
-                <p>Jogging - Anzug/Hose</p>
+                <p>Hoodie, Jogginghose</p>
             </li>
             <li>
                 <p>Flip-Flops</p>
