adjust program image

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -29,7 +29,8 @@
     <br>
     <p class="center"><b>17:00 Uhr - Ankunft Location</b></p>
     <br>
-    <img class="center" src="images/terasse.png" style="width: 85vw; max-width: 500px">
+    <img class="center" src="images/terasse.png"
+      style="width: 85vw; max-width: 500px; box-shadow:rgba(0,0,0.1) 0 2px 2px">
     <br>
     <p class="center">Wir treffen uns alle auf der Terasse.</p>
     <p class="center">Willkommensrede & Fotoshooting</p>
