--- a/src/app/components/dialogs/rules-dialog/rules-dialog.component.html
+++ b/src/app/components/dialogs/rules-dialog/rules-dialog.component.html
@@ -6,7 +6,7 @@
         <li>Habt eine gute Zeit zusammen!</li>
         <li>Es darf innerhalb des Gebäudes nicht geraucht werden.</li>
         <li>Toiletten sind bitte stets sauber zu halten.</li>
-        <li>Bitte geht pfleglich mit Möbeliar und Ausstattung um.</li>
+        <li>Bitte geht pfleglich mit Mobiliar und Ausstattung um.</li>
     </ul>
 </mat-dialog-content>
 <mat-dialog-actions>
