--- a/src/app/components/info-tab/info-tab.component.html
+++ b/src/app/components/info-tab/info-tab.component.html
@@ -61,7 +61,7 @@
         <p><strong>Parkplätze in der Nähe</strong></p>
         <ul>
           <li><span>Tiefgarage direkt bei der Eventlocation <a href="https://maps.app.goo.gl/BKLRmyHD1ZpthsFo6">nHow
-                Parking</a>.</span> (ca. 20 € pro Tag)</li>
+                Parking</a>. (ca. 20 € pro Tag)</span></li>
           <li><span>Parkplätze vor dem <a href="https://maps.app.goo.gl/hjS8v2asFaYRDwF26">nHow
                 Hotel</a>.</span></li>
           <li><span>Öffentliche Parkplätze gegenüber der Eventlocation <a
