--- a/src/app/components/info-tab/info-tab.component.scss
+++ b/src/app/components/info-tab/info-tab.component.scss
@@ -51,6 +51,10 @@
     height: 820px;
 }
 
+span {
+    color: black;
+}
+
 @media screen and (max-width: 1399px) {
     .myIframe {
         height: 500px;
